<resources>
    <string name="app_name">BIT603 - Assignment 2 - Jason Norton - 5001428</string>
    <string name="kiwi_cookies_and_cakes">Kiwi Cookies and Cakes</string>
    <string name="login">Login</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_incorrect_login_details">Incorrect username or password</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_try_again">Try again</string>
    <string name="hi">Hi</string>
    <string name="main_menu_welcome_message">Welcome to the Kiwi Cookies and Cakes Inventory Management App</string>
    <string name="inventory">Inventory</string>
    <string name="sign_out">Sign out</string>
    <string name="add_item">Add Item</string>
    <string name="view_stocktake_report">View Stocktake Report</string>
    <string name="main_menu_view_inventory">View Inventory</string>
    <string name="settings">Settings</string>
    <string name="forgot_password_message">Please enter your username and answer the security question.</string>
    <string name="security_question">Security Question:</string>
    <string name="question_favourite_colour">What is your favourite colour?</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="sign_out_dialog_title">Are you sure you want to sign out?</string>
    <string name="continue_">Continue</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_password">Get Password</string>
    <string name="your_password">Your Password:</string>
    <string name="incorrect_credentials">Incorrect username or favourite colour</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="subtract">Subtract</string>
    <string name="item">Item</string>
    <string name="confirm">Confirm</string>
    <string name="item_name_required">Please enter an item name</string>
    <string name="item_quantity_required">Please enter an item quantity</string>

</resources>
